src/parser.out
Grammar:

Rule 0     S' -> program
Rule 1     program -> statement_sequence
Rule 2     expr -> array
Rule 3     expr -> expr [ exprseq ]  [precedence=left, level=8]
Rule 4     expr -> ZEROS ( expr )
Rule 5     expr -> ONES ( expr )
Rule 6     expr -> EYE ( expr )
Rule 7     expr -> STRING
Rule 8     expr -> FLOATNUM
Rule 9     expr -> INTNUM
Rule 10    expr -> ID
Rule 11    expr -> expr '  [precedence=left, level=7]
Rule 12    expr -> SUB expr  [precedence=left, level=4]
Rule 13    expr -> ( expr )
Rule 14    expr -> expr : expr  [precedence=nonassoc, level=2]
Rule 15    expr -> expr LE expr  [precedence=left, level=3]
Rule 16    expr -> expr LT expr  [precedence=left, level=3]
Rule 17    expr -> expr GE expr  [precedence=left, level=3]
Rule 18    expr -> expr GT expr  [precedence=left, level=3]
Rule 19    expr -> expr NE expr  [precedence=left, level=3]
Rule 20    expr -> expr EQ expr  [precedence=left, level=3]
Rule 21    expr -> expr DDIV expr  [precedence=left, level=6]
Rule 22    expr -> expr DMUL expr  [precedence=left, level=6]
Rule 23    expr -> expr DSUB expr  [precedence=left, level=5]
Rule 24    expr -> expr DADD expr  [precedence=left, level=5]
Rule 25    expr -> expr DIV expr  [precedence=left, level=6]
Rule 26    expr -> expr MUL expr  [precedence=left, level=6]
Rule 27    expr -> expr SUB expr  [precedence=left, level=5]
Rule 28    expr -> expr ADD expr  [precedence=left, level=5]
Rule 29    exprseq -> exprseq , expr
Rule 30    exprseq -> expr
Rule 31    array -> [ elements ]
Rule 32    elements -> elements , expr
Rule 33    elements -> expr
Rule 34    statement -> { statement_sequence }
Rule 35    statement -> FOR ID = exprseq statement  [precedence=right, level=1]
Rule 36    statement -> WHILE ( expr ) statement
Rule 37    statement -> IF ( expr ) statement ELSE statement  [precedence=nonassoc, level=10]
Rule 38    statement -> IF ( expr ) statement  [precedence=nonassoc, level=9]
Rule 39    statement -> expr IDIV expr ;
Rule 40    statement -> expr IMUL expr ;
Rule 41    statement -> expr ISUB expr ;
Rule 42    statement -> expr IADD expr ;
Rule 43    statement -> expr = expr ;
Rule 44    statement -> CONTINUE ;
Rule 45    statement -> BREAK ;
Rule 46    statement -> RETURN exprseq ;
Rule 47    statement -> PRINT exprseq ;
Rule 48    statement_sequence -> statement
Rule 49    statement_sequence -> statement statement_sequence

Terminals, with rules where they appear:

'                    : 11
(                    : 4 5 6 13 36 37 38
)                    : 4 5 6 13 36 37 38
,                    : 29 32
:                    : 14
;                    : 39 40 41 42 43 44 45 46 47
=                    : 35 43
ADD                  : 28
BREAK                : 45
CONTINUE             : 44
DADD                 : 24
DDIV                 : 21
DIV                  : 25
DMUL                 : 22
DSUB                 : 23
ELSE                 : 37
EQ                   : 20
EYE                  : 6
FLOATNUM             : 8
FOR                  : 35
GE                   : 17
GT                   : 18
IADD                 : 42
ID                   : 10 35
IDIV                 : 39
IF                   : 37 38
IMUL                 : 40
INTNUM               : 9
ISUB                 : 41
LE                   : 15
LT                   : 16
MUL                  : 26
NE                   : 19
ONES                 : 5
PRINT                : 47
RETURN               : 46
STRING               : 7
SUB                  : 12 27
WHILE                : 36
ZEROS                : 4
[                    : 3 31
]                    : 3 31
error                : 
{                    : 34
}                    : 34

Nonterminals, with rules where they appear:

array                : 2
elements             : 31 32
expr                 : 3 4 5 6 11 12 13 14 14 15 15 16 16 17 17 18 18 19 19 20 20 21 21 22 22 23 23 24 24 25 25 26 26 27 27 28 28 29 30 32 33 36 37 38 39 39 40 40 41 41 42 42 43 43
exprseq              : 3 29 35 46 47
program              : 0
statement            : 35 36 37 37 38 48 49
statement_sequence   : 1 34 49


state 0

    (0) S' -> . program
    (1) program -> . statement_sequence
    (48) statement_sequence -> . statement
    (49) statement_sequence -> . statement statement_sequence
    (34) statement -> . { statement_sequence }
    (35) statement -> . FOR ID = exprseq statement
    (36) statement -> . WHILE ( expr ) statement
    (37) statement -> . IF ( expr ) statement ELSE statement
    (38) statement -> . IF ( expr ) statement
    (39) statement -> . expr IDIV expr ;
    (40) statement -> . expr IMUL expr ;
    (41) statement -> . expr ISUB expr ;
    (42) statement -> . expr IADD expr ;
    (43) statement -> . expr = expr ;
    (44) statement -> . CONTINUE ;
    (45) statement -> . BREAK ;
    (46) statement -> . RETURN exprseq ;
    (47) statement -> . PRINT exprseq ;
    (2) expr -> . array
    (3) expr -> . expr [ exprseq ]
    (4) expr -> . ZEROS ( expr )
    (5) expr -> . ONES ( expr )
    (6) expr -> . EYE ( expr )
    (7) expr -> . STRING
    (8) expr -> . FLOATNUM
    (9) expr -> . INTNUM
    (10) expr -> . ID
    (11) expr -> . expr '
    (12) expr -> . SUB expr
    (13) expr -> . ( expr )
    (14) expr -> . expr : expr
    (15) expr -> . expr LE expr
    (16) expr -> . expr LT expr
    (17) expr -> . expr GE expr
    (18) expr -> . expr GT expr
    (19) expr -> . expr NE expr
    (20) expr -> . expr EQ expr
    (21) expr -> . expr DDIV expr
    (22) expr -> . expr DMUL expr
    (23) expr -> . expr DSUB expr
    (24) expr -> . expr DADD expr
    (25) expr -> . expr DIV expr
    (26) expr -> . expr MUL expr
    (27) expr -> . expr SUB expr
    (28) expr -> . expr ADD expr
    (31) array -> . [ elements ]
    {               shift and go to state 4
    FOR             shift and go to state 5
    WHILE           shift and go to state 7
    IF              shift and go to state 10
    CONTINUE        shift and go to state 11
    BREAK           shift and go to state 12
    RETURN          shift and go to state 13
    PRINT           shift and go to state 14
    ZEROS           shift and go to state 17
    ONES            shift and go to state 18
    EYE             shift and go to state 19
    STRING          shift and go to state 20
    FLOATNUM        shift and go to state 21
    INTNUM          shift and go to state 22
    ID              shift and go to state 6
    SUB             shift and go to state 23
    (               shift and go to state 8
    [               shift and go to state 16

    program                        shift and go to state 1
    statement_sequence             shift and go to state 2
    statement                      shift and go to state 3
    expr                           shift and go to state 9
    array                          shift and go to state 15

state 1

    (0) S' -> program .


state 2

    (1) program -> statement_sequence .
    $end            reduce using rule 1 (program -> statement_sequence .)


state 3

    (48) statement_sequence -> statement .
    (49) statement_sequence -> statement . statement_sequence
    (48) statement_sequence -> . statement
    (49) statement_sequence -> . statement statement_sequence
    (34) statement -> . { statement_sequence }
    (35) statement -> . FOR ID = exprseq statement
    (36) statement -> . WHILE ( expr ) statement
    (37) statement -> . IF ( expr ) statement ELSE statement
    (38) statement -> . IF ( expr ) statement
    (39) statement -> . expr IDIV expr ;
    (40) statement -> . expr IMUL expr ;
    (41) statement -> . expr ISUB expr ;
    (42) statement -> . expr IADD expr ;
    (43) statement -> . expr = expr ;
    (44) statement -> . CONTINUE ;
    (45) statement -> . BREAK ;
    (46) statement -> . RETURN exprseq ;
    (47) statement -> . PRINT exprseq ;
    (2) expr -> . array
    (3) expr -> . expr [ exprseq ]
    (4) expr -> . ZEROS ( expr )
    (5) expr -> . ONES ( expr )
    (6) expr -> . EYE ( expr )
    (7) expr -> . STRING
    (8) expr -> . FLOATNUM
    (9) expr -> . INTNUM
    (10) expr -> . ID
    (11) expr -> . expr '
    (12) expr -> . SUB expr
    (13) expr -> . ( expr )
    (14) expr -> . expr : expr
    (15) expr -> . expr LE expr
    (16) expr -> . expr LT expr
    (17) expr -> . expr GE expr
    (18) expr -> . expr GT expr
    (19) expr -> . expr NE expr
    (20) expr -> . expr EQ expr
    (21) expr -> . expr DDIV expr
    (22) expr -> . expr DMUL expr
    (23) expr -> . expr DSUB expr
    (24) expr -> . expr DADD expr
    (25) expr -> . expr DIV expr
    (26) expr -> . expr MUL expr
    (27) expr -> . expr SUB expr
    (28) expr -> . expr ADD expr
    (31) array -> . [ elements ]
    $end            reduce using rule 48 (statement_sequence -> statement .)
    }               reduce using rule 48 (statement_sequence -> statement .)
    {               shift and go to state 4
    FOR             shift and go to state 5
    WHILE           shift and go to state 7
    IF              shift and go to state 10
    CONTINUE        shift and go to state 11
    BREAK           shift and go to state 12
    RETURN          shift and go to state 13
    PRINT           shift and go to state 14
    ZEROS           shift and go to state 17
    ONES            shift and go to state 18
    EYE             shift and go to state 19
    STRING          shift and go to state 20
    FLOATNUM        shift and go to state 21
    INTNUM          shift and go to state 22
    ID              shift and go to state 6
    SUB             shift and go to state 23
    (               shift and go to state 8
    [               shift and go to state 16

    statement                      shift and go to state 3
    statement_sequence             shift and go to state 24
    expr                           shift and go to state 9
    array                          shift and go to state 15

state 4

    (34) statement -> { . statement_sequence }
    (48) statement_sequence -> . statement
    (49) statement_sequence -> . statement statement_sequence
    (34) statement -> . { statement_sequence }
    (35) statement -> . FOR ID = exprseq statement
    (36) statement -> . WHILE ( expr ) statement
    (37) statement -> . IF ( expr ) statement ELSE statement
    (38) statement -> . IF ( expr ) statement
    (39) statement -> . expr IDIV expr ;
    (40) statement -> . expr IMUL expr ;
    (41) statement -> . expr ISUB expr ;
    (42) statement -> . expr IADD expr ;
    (43) statement -> . expr = expr ;
    (44) statement -> . CONTINUE ;
    (45) statement -> . BREAK ;
    (46) statement -> . RETURN exprseq ;
    (47) statement -> . PRINT exprseq ;
    (2) expr -> . array
    (3) expr -> . expr [ exprseq ]
    (4) expr -> . ZEROS ( expr )
    (5) expr -> . ONES ( expr )
    (6) expr -> . EYE ( expr )
    (7) expr -> . STRING
    (8) expr -> . FLOATNUM
    (9) expr -> . INTNUM
    (10) expr -> . ID
    (11) expr -> . expr '
    (12) expr -> . SUB expr
    (13) expr -> . ( expr )
    (14) expr -> . expr : expr
    (15) expr -> . expr LE expr
    (16) expr -> . expr LT expr
    (17) expr -> . expr GE expr
    (18) expr -> . expr GT expr
    (19) expr -> . expr NE expr
    (20) expr -> . expr EQ expr
    (21) expr -> . expr DDIV expr
    (22) expr -> . expr DMUL expr
    (23) expr -> . expr DSUB expr
    (24) expr -> . expr DADD expr
    (25) expr -> . expr DIV expr
    (26) expr -> . expr MUL expr
    (27) expr -> . expr SUB expr
    (28) expr -> . expr ADD expr
    (31) array -> . [ elements ]
    {               shift and go to state 4
    FOR             shift and go to state 5
    WHILE           shift and go to state 7
    IF              shift and go to state 10
    CONTINUE        shift and go to state 11
    BREAK           shift and go to state 12
    RETURN          shift and go to state 13
    PRINT           shift and go to state 14
    ZEROS           shift and go to state 17
    ONES            shift and go to state 18
    EYE             shift and go to state 19
    STRING          shift and go to state 20
    FLOATNUM        shift and go to state 21
    INTNUM          shift and go to state 22
    ID              shift and go to state 6
    SUB             shift and go to state 23
    (               shift and go to state 8
    [               shift and go to state 16

    statement_sequence             shift and go to state 25
    statement                      shift and go to state 3
    expr                           shift and go to state 9
    array                          shift and go to state 15

state 5

    (35) statement -> FOR . ID = exprseq statement
    ID              shift and go to state 26


state 6

    (10) expr -> ID .
    IDIV            reduce using rule 10 (expr -> ID .)
    IMUL            reduce using rule 10 (expr -> ID .)
    ISUB            reduce using rule 10 (expr -> ID .)
    IADD            reduce using rule 10 (expr -> ID .)
    =               reduce using rule 10 (expr -> ID .)
    [               reduce using rule 10 (expr -> ID .)
    '               reduce using rule 10 (expr -> ID .)
    :               reduce using rule 10 (expr -> ID .)
    LE              reduce using rule 10 (expr -> ID .)
    LT              reduce using rule 10 (expr -> ID .)
    GE              reduce using rule 10 (expr -> ID .)
    GT              reduce using rule 10 (expr -> ID .)
    NE              reduce using rule 10 (expr -> ID .)
    EQ              reduce using rule 10 (expr -> ID .)
    DDIV            reduce using rule 10 (expr -> ID .)
    DMUL            reduce using rule 10 (expr -> ID .)
    DSUB            reduce using rule 10 (expr -> ID .)
    DADD            reduce using rule 10 (expr -> ID .)
    DIV             reduce using rule 10 (expr -> ID .)
    MUL             reduce using rule 10 (expr -> ID .)
    SUB             reduce using rule 10 (expr -> ID .)
    ADD             reduce using rule 10 (expr -> ID .)
    )               reduce using rule 10 (expr -> ID .)
    ;               reduce using rule 10 (expr -> ID .)
    ,               reduce using rule 10 (expr -> ID .)
    ]               reduce using rule 10 (expr -> ID .)
    {               reduce using rule 10 (expr -> ID .)
    FOR             reduce using rule 10 (expr -> ID .)
    WHILE           reduce using rule 10 (expr -> ID .)
    IF              reduce using rule 10 (expr -> ID .)
    CONTINUE        reduce using rule 10 (expr -> ID .)
    BREAK           reduce using rule 10 (expr -> ID .)
    RETURN          reduce using rule 10 (expr -> ID .)
    PRINT           reduce using rule 10 (expr -> ID .)
    ZEROS           reduce using rule 10 (expr -> ID .)
    ONES            reduce using rule 10 (expr -> ID .)
    EYE             reduce using rule 10 (expr -> ID .)
    STRING          reduce using rule 10 (expr -> ID .)
    FLOATNUM        reduce using rule 10 (expr -> ID .)
    INTNUM          reduce using rule 10 (expr -> ID .)
    ID              reduce using rule 10 (expr -> ID .)
    (               reduce using rule 10 (expr -> ID .)


state 7

    (36) statement -> WHILE . ( expr ) statement
    (               shift and go to state 27


state 8

    (13) expr -> ( . expr )
    (2) expr -> . array
    (3) expr -> . expr [ exprseq ]
    (4) expr -> . ZEROS ( expr )
    (5) expr -> . ONES ( expr )
    (6) expr -> . EYE ( expr )
    (7) expr -> . STRING
    (8) expr -> . FLOATNUM
    (9) expr -> . INTNUM
    (10) expr -> . ID
    (11) expr -> . expr '
    (12) expr -> . SUB expr
    (13) expr -> . ( expr )
    (14) expr -> . expr : expr
    (15) expr -> . expr LE expr
    (16) expr -> . expr LT expr
    (17) expr -> . expr GE expr
    (18) expr -> . expr GT expr
    (19) expr -> . expr NE expr
    (20) expr -> . expr EQ expr
    (21) expr -> . expr DDIV expr
    (22) expr -> . expr DMUL expr
    (23) expr -> . expr DSUB expr
    (24) expr -> . expr DADD expr
    (25) expr -> . expr DIV expr
    (26) expr -> . expr MUL expr
    (27) expr -> . expr SUB expr
    (28) expr -> . expr ADD expr
    (31) array -> . [ elements ]
    ZEROS           shift and go to state 17
    ONES            shift and go to state 18
    EYE             shift and go to state 19
    STRING          shift and go to state 20
    FLOATNUM        shift and go to state 21
    INTNUM          shift and go to state 22
    ID              shift and go to state 6
    SUB             shift and go to state 23
    (               shift and go to state 8
    [               shift and go to state 16

    expr                           shift and go to state 28
    array                          shift and go to state 15

state 9

    (39) statement -> expr . IDIV expr ;
    (40) statement -> expr . IMUL expr ;
    (41) statement -> expr . ISUB expr ;
    (42) statement -> expr . IADD expr ;
    (43) statement -> expr . = expr ;
    (3) expr -> expr . [ exprseq ]
    (11) expr -> expr . '
    (14) expr -> expr . : expr
    (15) expr -> expr . LE expr
    (16) expr -> expr . LT expr
    (17) expr -> expr . GE expr
    (18) expr -> expr . GT expr
    (19) expr -> expr . NE expr
    (20) expr -> expr . EQ expr
    (21) expr -> expr . DDIV expr
    (22) expr -> expr . DMUL expr
    (23) expr -> expr . DSUB expr
    (24) expr -> expr . DADD expr
    (25) expr -> expr . DIV expr
    (26) expr -> expr . MUL expr
    (27) expr -> expr . SUB expr
    (28) expr -> expr . ADD expr
    IDIV            shift and go to state 29
    IMUL            shift and go to state 30
    ISUB            shift and go to state 31
    IADD            shift and go to state 32
    =               shift and go to state 33
    [               shift and go to state 34
    '               shift and go to state 35
    :               shift and go to state 36
    LE              shift and go to state 37
    LT              shift and go to state 38
    GE              shift and go to state 39
    GT              shift and go to state 40
    NE              shift and go to state 41
    EQ              shift and go to state 42
    DDIV            shift and go to state 43
    DMUL            shift and go to state 44
    DSUB            shift and go to state 45
    DADD            shift and go to state 46
    DIV             shift and go to state 47
    MUL             shift and go to state 48
    SUB             shift and go to state 49
    ADD             shift and go to state 50


state 10

    (37) statement -> IF . ( expr ) statement ELSE statement
    (38) statement -> IF . ( expr ) statement
    (               shift and go to state 51


state 11

    (44) statement -> CONTINUE . ;
    ;               shift and go to state 52


state 12

    (45) statement -> BREAK . ;
    ;               shift and go to state 53


state 13

    (46) statement -> RETURN . exprseq ;
    (29) exprseq -> . exprseq , expr
    (30) exprseq -> . expr
    (2) expr -> . array
    (3) expr -> . expr [ exprseq ]
    (4) expr -> . ZEROS ( expr )
    (5) expr -> . ONES ( expr )
    (6) expr -> . EYE ( expr )
    (7) expr -> . STRING
    (8) expr -> . FLOATNUM
    (9) expr -> . INTNUM
    (10) expr -> . ID
    (11) expr -> . expr '
    (12) expr -> . SUB expr
    (13) expr -> . ( expr )
    (14) expr -> . expr : expr
    (15) expr -> . expr LE expr
    (16) expr -> . expr LT expr
    (17) expr -> . expr GE expr
    (18) expr -> . expr GT expr
    (19) expr -> . expr NE expr
    (20) expr -> . expr EQ expr
    (21) expr -> . expr DDIV expr
    (22) expr -> . expr DMUL expr
    (23) expr -> . expr DSUB expr
    (24) expr -> . expr DADD expr
    (25) expr -> . expr DIV expr
    (26) expr -> . expr MUL expr
    (27) expr -> . expr SUB expr
    (28) expr -> . expr ADD expr
    (31) array -> . [ elements ]
    ZEROS           shift and go to state 17
    ONES            shift and go to state 18
    EYE             shift and go to state 19
    STRING          shift and go to state 20
    FLOATNUM        shift and go to state 21
    INTNUM          shift and go to state 22
    ID              shift and go to state 6
    SUB             shift and go to state 23
    (               shift and go to state 8
    [               shift and go to state 16

    exprseq                        shift and go to state 54
    expr                           shift and go to state 55
    array                          shift and go to state 15

state 14

    (47) statement -> PRINT . exprseq ;
    (29) exprseq -> . exprseq , expr
    (30) exprseq -> . expr
    (2) expr -> . array
    (3) expr -> . expr [ exprseq ]
    (4) expr -> . ZEROS ( expr )
    (5) expr -> . ONES ( expr )
    (6) expr -> . EYE ( expr )
    (7) expr -> . STRING
    (8) expr -> . FLOATNUM
    (9) expr -> . INTNUM
    (10) expr -> . ID
    (11) expr -> . expr '
    (12) expr -> . SUB expr
    (13) expr -> . ( expr )
    (14) expr -> . expr : expr
    (15) expr -> . expr LE expr
    (16) expr -> . expr LT expr
    (17) expr -> . expr GE expr
    (18) expr -> . expr GT expr
    (19) expr -> . expr NE expr
    (20) expr -> . expr EQ expr
    (21) expr -> . expr DDIV expr
    (22) expr -> . expr DMUL expr
    (23) expr -> . expr DSUB expr
    (24) expr -> . expr DADD expr
    (25) expr -> . expr DIV expr
    (26) expr -> . expr MUL expr
    (27) expr -> . expr SUB expr
    (28) expr -> . expr ADD expr
    (31) array -> . [ elements ]
    ZEROS           shift and go to state 17
    ONES            shift and go to state 18
    EYE             shift and go to state 19
    STRING          shift and go to state 20
    FLOATNUM        shift and go to state 21
    INTNUM          shift and go to state 22
    ID              shift and go to state 6
    SUB             shift and go to state 23
    (               shift and go to state 8
    [               shift and go to state 16

    exprseq                        shift and go to state 56
    expr                           shift and go to state 55
    array                          shift and go to state 15

state 15

    (2) expr -> array .
    IDIV            reduce using rule 2 (expr -> array .)
    IMUL            reduce using rule 2 (expr -> array .)
    ISUB            reduce using rule 2 (expr -> array .)
    IADD            reduce using rule 2 (expr -> array .)
    =               reduce using rule 2 (expr -> array .)
    [               reduce using rule 2 (expr -> array .)
    '               reduce using rule 2 (expr -> array .)
    :               reduce using rule 2 (expr -> array .)
    LE              reduce using rule 2 (expr -> array .)
    LT              reduce using rule 2 (expr -> array .)
    GE              reduce using rule 2 (expr -> array .)
    GT              reduce using rule 2 (expr -> array .)
    NE              reduce using rule 2 (expr -> array .)
    EQ              reduce using rule 2 (expr -> array .)
    DDIV            reduce using rule 2 (expr -> array .)
    DMUL            reduce using rule 2 (expr -> array .)
    DSUB            reduce using rule 2 (expr -> array .)
    DADD            reduce using rule 2 (expr -> array .)
    DIV             reduce using rule 2 (expr -> array .)
    MUL             reduce using rule 2 (expr -> array .)
    SUB             reduce using rule 2 (expr -> array .)
    ADD             reduce using rule 2 (expr -> array .)
    )               reduce using rule 2 (expr -> array .)
    ;               reduce using rule 2 (expr -> array .)
    ,               reduce using rule 2 (expr -> array .)
    ]               reduce using rule 2 (expr -> array .)
    {               reduce using rule 2 (expr -> array .)
    FOR             reduce using rule 2 (expr -> array .)
    WHILE           reduce using rule 2 (expr -> array .)
    IF              reduce using rule 2 (expr -> array .)
    CONTINUE        reduce using rule 2 (expr -> array .)
    BREAK           reduce using rule 2 (expr -> array .)
    RETURN          reduce using rule 2 (expr -> array .)
    PRINT           reduce using rule 2 (expr -> array .)
    ZEROS           reduce using rule 2 (expr -> array .)
    ONES            reduce using rule 2 (expr -> array .)
    EYE             reduce using rule 2 (expr -> array .)
    STRING          reduce using rule 2 (expr -> array .)
    FLOATNUM        reduce using rule 2 (expr -> array .)
    INTNUM          reduce using rule 2 (expr -> array .)
    ID              reduce using rule 2 (expr -> array .)
    (               reduce using rule 2 (expr -> array .)


state 16

    (31) array -> [ . elements ]
    (32) elements -> . elements , expr
    (33) elements -> . expr
    (2) expr -> . array
    (3) expr -> . expr [ exprseq ]
    (4) expr -> . ZEROS ( expr )
    (5) expr -> . ONES ( expr )
    (6) expr -> . EYE ( expr )
    (7) expr -> . STRING
    (8) expr -> . FLOATNUM
    (9) expr -> . INTNUM
    (10) expr -> . ID
    (11) expr -> . expr '
    (12) expr -> . SUB expr
    (13) expr -> . ( expr )
    (14) expr -> . expr : expr
    (15) expr -> . expr LE expr
    (16) expr -> . expr LT expr
    (17) expr -> . expr GE expr
    (18) expr -> . expr GT expr
    (19) expr -> . expr NE expr
    (20) expr -> . expr EQ expr
    (21) expr -> . expr DDIV expr
    (22) expr -> . expr DMUL expr
    (23) expr -> . expr DSUB expr
    (24) expr -> . expr DADD expr
    (25) expr -> . expr DIV expr
    (26) expr -> . expr MUL expr
    (27) expr -> . expr SUB expr
    (28) expr -> . expr ADD expr
    (31) array -> . [ elements ]
    ZEROS           shift and go to state 17
    ONES            shift and go to state 18
    EYE             shift and go to state 19
    STRING          shift and go to state 20
    FLOATNUM        shift and go to state 21
    INTNUM          shift and go to state 22
    ID              shift and go to state 6
    SUB             shift and go to state 23
    (               shift and go to state 8
    [               shift and go to state 16

    elements                       shift and go to state 57
    expr                           shift and go to state 58
    array                          shift and go to state 15

state 17

    (4) expr -> ZEROS . ( expr )
    (               shift and go to state 59


state 18

    (5) expr -> ONES . ( expr )
    (               shift and go to state 60


state 19

    (6) expr -> EYE . ( expr )
    (               shift and go to state 61


state 20

    (7) expr -> STRING .
    IDIV            reduce using rule 7 (expr -> STRING .)
    IMUL            reduce using rule 7 (expr -> STRING .)
    ISUB            reduce using rule 7 (expr -> STRING .)
    IADD            reduce using rule 7 (expr -> STRING .)
    =               reduce using rule 7 (expr -> STRING .)
    [               reduce using rule 7 (expr -> STRING .)
    '               reduce using rule 7 (expr -> STRING .)
    :               reduce using rule 7 (expr -> STRING .)
    LE              reduce using rule 7 (expr -> STRING .)
    LT              reduce using rule 7 (expr -> STRING .)
    GE              reduce using rule 7 (expr -> STRING .)
    GT              reduce using rule 7 (expr -> STRING .)
    NE              reduce using rule 7 (expr -> STRING .)
    EQ              reduce using rule 7 (expr -> STRING .)
    DDIV            reduce using rule 7 (expr -> STRING .)
    DMUL            reduce using rule 7 (expr -> STRING .)
    DSUB            reduce using rule 7 (expr -> STRING .)
    DADD            reduce using rule 7 (expr -> STRING .)
    DIV             reduce using rule 7 (expr -> STRING .)
    MUL             reduce using rule 7 (expr -> STRING .)
    SUB             reduce using rule 7 (expr -> STRING .)
    ADD             reduce using rule 7 (expr -> STRING .)
    )               reduce using rule 7 (expr -> STRING .)
    ;               reduce using rule 7 (expr -> STRING .)
    ,               reduce using rule 7 (expr -> STRING .)
    ]               reduce using rule 7 (expr -> STRING .)
    {               reduce using rule 7 (expr -> STRING .)
    FOR             reduce using rule 7 (expr -> STRING .)
    WHILE           reduce using rule 7 (expr -> STRING .)
    IF              reduce using rule 7 (expr -> STRING .)
    CONTINUE        reduce using rule 7 (expr -> STRING .)
    BREAK           reduce using rule 7 (expr -> STRING .)
    RETURN          reduce using rule 7 (expr -> STRING .)
    PRINT           reduce using rule 7 (expr -> STRING .)
    ZEROS           reduce using rule 7 (expr -> STRING .)
    ONES            reduce using rule 7 (expr -> STRING .)
    EYE             reduce using rule 7 (expr -> STRING .)
    STRING          reduce using rule 7 (expr -> STRING .)
    FLOATNUM        reduce using rule 7 (expr -> STRING .)
    INTNUM          reduce using rule 7 (expr -> STRING .)
    ID              reduce using rule 7 (expr -> STRING .)
    (               reduce using rule 7 (expr -> STRING .)


state 21

    (8) expr -> FLOATNUM .
    IDIV            reduce using rule 8 (expr -> FLOATNUM .)
    IMUL            reduce using rule 8 (expr -> FLOATNUM .)
    ISUB            reduce using rule 8 (expr -> FLOATNUM .)
    IADD            reduce using rule 8 (expr -> FLOATNUM .)
    =               reduce using rule 8 (expr -> FLOATNUM .)
    [               reduce using rule 8 (expr -> FLOATNUM .)
    '               reduce using rule 8 (expr -> FLOATNUM .)
    :               reduce using rule 8 (expr -> FLOATNUM .)
    LE              reduce using rule 8 (expr -> FLOATNUM .)
    LT              reduce using rule 8 (expr -> FLOATNUM .)
    GE              reduce using rule 8 (expr -> FLOATNUM .)
    GT              reduce using rule 8 (expr -> FLOATNUM .)
    NE              reduce using rule 8 (expr -> FLOATNUM .)
    EQ              reduce using rule 8 (expr -> FLOATNUM .)
    DDIV            reduce using rule 8 (expr -> FLOATNUM .)
    DMUL            reduce using rule 8 (expr -> FLOATNUM .)
    DSUB            reduce using rule 8 (expr -> FLOATNUM .)
    DADD            reduce using rule 8 (expr -> FLOATNUM .)
    DIV             reduce using rule 8 (expr -> FLOATNUM .)
    MUL             reduce using rule 8 (expr -> FLOATNUM .)
    SUB             reduce using rule 8 (expr -> FLOATNUM .)
    ADD             reduce using rule 8 (expr -> FLOATNUM .)
    )               reduce using rule 8 (expr -> FLOATNUM .)
    ;               reduce using rule 8 (expr -> FLOATNUM .)
    ,               reduce using rule 8 (expr -> FLOATNUM .)
    ]               reduce using rule 8 (expr -> FLOATNUM .)
    {               reduce using rule 8 (expr -> FLOATNUM .)
    FOR             reduce using rule 8 (expr -> FLOATNUM .)
    WHILE           reduce using rule 8 (expr -> FLOATNUM .)
    IF              reduce using rule 8 (expr -> FLOATNUM .)
    CONTINUE        reduce using rule 8 (expr -> FLOATNUM .)
    BREAK           reduce using rule 8 (expr -> FLOATNUM .)
    RETURN          reduce using rule 8 (expr -> FLOATNUM .)
    PRINT           reduce using rule 8 (expr -> FLOATNUM .)
    ZEROS           reduce using rule 8 (expr -> FLOATNUM .)
    ONES            reduce using rule 8 (expr -> FLOATNUM .)
    EYE             reduce using rule 8 (expr -> FLOATNUM .)
    STRING          reduce using rule 8 (expr -> FLOATNUM .)
    FLOATNUM        reduce using rule 8 (expr -> FLOATNUM .)
    INTNUM          reduce using rule 8 (expr -> FLOATNUM .)
    ID              reduce using rule 8 (expr -> FLOATNUM .)
    (               reduce using rule 8 (expr -> FLOATNUM .)


state 22

    (9) expr -> INTNUM .
    IDIV            reduce using rule 9 (expr -> INTNUM .)
    IMUL            reduce using rule 9 (expr -> INTNUM .)
    ISUB            reduce using rule 9 (expr -> INTNUM .)
    IADD            reduce using rule 9 (expr -> INTNUM .)
    =               reduce using rule 9 (expr -> INTNUM .)
    [               reduce using rule 9 (expr -> INTNUM .)
    '               reduce using rule 9 (expr -> INTNUM .)
    :               reduce using rule 9 (expr -> INTNUM .)
    LE              reduce using rule 9 (expr -> INTNUM .)
    LT              reduce using rule 9 (expr -> INTNUM .)
    GE              reduce using rule 9 (expr -> INTNUM .)
    GT              reduce using rule 9 (expr -> INTNUM .)
    NE              reduce using rule 9 (expr -> INTNUM .)
    EQ              reduce using rule 9 (expr -> INTNUM .)
    DDIV            reduce using rule 9 (expr -> INTNUM .)
    DMUL            reduce using rule 9 (expr -> INTNUM .)
    DSUB            reduce using rule 9 (expr -> INTNUM .)
    DADD            reduce using rule 9 (expr -> INTNUM .)
    DIV             reduce using rule 9 (expr -> INTNUM .)
    MUL             reduce using rule 9 (expr -> INTNUM .)
    SUB             reduce using rule 9 (expr -> INTNUM .)
    ADD             reduce using rule 9 (expr -> INTNUM .)
    )               reduce using rule 9 (expr -> INTNUM .)
    ;               reduce using rule 9 (expr -> INTNUM .)
    ,               reduce using rule 9 (expr -> INTNUM .)
    ]               reduce using rule 9 (expr -> INTNUM .)
    {               reduce using rule 9 (expr -> INTNUM .)
    FOR             reduce using rule 9 (expr -> INTNUM .)
    WHILE           reduce using rule 9 (expr -> INTNUM .)
    IF              reduce using rule 9 (expr -> INTNUM .)
    CONTINUE        reduce using rule 9 (expr -> INTNUM .)
    BREAK           reduce using rule 9 (expr -> INTNUM .)
    RETURN          reduce using rule 9 (expr -> INTNUM .)
    PRINT           reduce using rule 9 (expr -> INTNUM .)
    ZEROS           reduce using rule 9 (expr -> INTNUM .)
    ONES            reduce using rule 9 (expr -> INTNUM .)
    EYE             reduce using rule 9 (expr -> INTNUM .)
    STRING          reduce using rule 9 (expr -> INTNUM .)
    FLOATNUM        reduce using rule 9 (expr -> INTNUM .)
    INTNUM          reduce using rule 9 (expr -> INTNUM .)
    ID              reduce using rule 9 (expr -> INTNUM .)
    (               reduce using rule 9 (expr -> INTNUM .)


state 23
